--- a/ExampleWithContainerSTL/ExampleWithContainerSTL.vcxproj
+++ b/ExampleWithContainerSTL/ExampleWithContainerSTL.vcxproj
@@ -78,6 +78,7 @@
     <ClInclude Include="Deque.h" />
     <ClInclude Include="ListExample.h" />
     <ClInclude Include="stdafx.h" />
+    <ClInclude Include="StringExample.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="VectorExample.h" />
   </ItemGroup>
@@ -89,6 +90,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="StringExample.cpp" />
     <ClCompile Include="VectorExample.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
